spec/error_trait_missing_method.expected
spec/error_trait_missing_method.kex:6:1: error: make Point, implement: Printable — missing required method 'toString'
Aborted: fix type errors before running (use --no-check to skip).
